📚 Full Software README - Detailed, Beautiful, Simple Explanation
- Rewrote README.md completely: detailed, simple, beautiful
- Added sections: What is VoltPur, Difference vs Purpur, Stability Checklist (5 builds success), Worlds, Files, Pterodactyl, Commands, Performance Real, Structure, Pterodactyl guide, Benchmarks, Links
- Includes: 5 consecutive successful builds, 3 worlds, 9 files, all commands linked, performance real 15-20%
- Explains 4 download methods: Releases (easy), Actions Artifacts (with unzip warning), /vo up (saves user internet), Local build
- Explains Pterodactyl Invalid jar fix (ZIP vs JAR, SFTP, file validation)
- Explains folder structure with emojis and beautiful ASCII
- Includes detailed command examples with expected output
- Links to BENCHMARKS.md (real numbers), STABILITY_CHECK.md, RC1_PLAN.md, FO_PLAN.md
- Marks as Full Software Edition v26.2.0-RC1, STABLE